--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,7 +4,7 @@
 primaryColor = '#7792E3'
 
 # Background color for the main content area
-backgroundColor = '#3c6638'
+backgroundColor = '#383866'
 
 # Color used for almost all text
 textColor = '#FFFFFF'
