--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ llama-cpp-python==0.1.9
 nltk==3.8.1
 sentence_transformers
 langchain==0.1.20
-langchain-google-genai
+langchain-google-genai==2.0.0
